Fix missing call to webkit_uri_request_set_uri in WK2

https://bugzilla.gnome.org/show_bug.cgi?id=695446